# turboquant-amd

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  tq_autoload.pth
benchmarks/: bench_e2e.py  bench_fp4_pa.py  bench_kernels.py  bench_optimal_splits.py
benchmarks/results/: mi355x_results.md
docs/: ARCHITECTURE.md  BLOG_NOTES.md  E2E_BENCHMARK_RESULTS.md  KERNEL_EVOLUTION.md  MI355X_BLOCKSIZE_FIX.md  RESULTS.md
docs/design/: AITER_FUSION_PLAN.md  AITER_TURBO4_DESIGN.md  MXFP4_PA_KERNEL.md  README.md
tests/: test_asymmetric_kv.py  test_attention.py  test_boundary_protection.py  test_codebook.py  test_compress.py  test_fp4_pa_correctness.py  test_fp4_pa_hip.py  test_rotation.py
tests/hip/: README.md  test_wht_roundtrip.cpp
turboquant/: __init__.py
turboquant/core/: __init__.py  codebook.py  quantizer.py  rotation.py
turboquant/integration/: README.md  __init__.py  dflash_rocm_patch.py  llamacpp.py  tq_fp4_backend.py  vllm_backend.py  vllm_fp4_cache_patch.py  vllm_fp4_pa.py
turboquant/integration/aiter/: fp4_fp8_lut.py  optimize_mxfp4_kernel.py  pa_kernels_fp4.cuh  paged_attention_fp4_patch.py  patch_pa_mxfp4.py
turboquant/kernels/: __init__.py  attention.py  compress_k.py  compress_v.py  fp4_pa_hip.hip  fp4_pa_mfma.hip  fp4_pa_triton.py  fp4_pa_triton_v2.py  fp4_pa_v11.hip  fp4_pa_v3.hip  fp4_pa_v4.hip  fp4_pa_v6.hip  fp4_pa_v7.hip  fp4_pa_v8.hip  fp4_pa_v9.hip  fp4_pa_v9_interleaved.hip  fp4_pa_v9_unified.hip  fp4_pa_v9u_ext.cpp  fp4_paged_attention.py  packed_attention.py  packed_compress.py  sparse_v.py
turboquant/reference/: __init__.py
(+2 files in other folders)
