[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant"
version = "0.1.0"
description = "TurboQuant: Near-optimal KV cache quantization for LLM serving on AMD GPUs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Andy Luo", email = "andyluo7@users.noreply.github.com"},
]
keywords = ["llm", "kv-cache", "quantization", "amd", "rocm", "triton", "vllm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "scipy>=1.10",
]
bench = [
    "scipy>=1.10",
    "matplotlib>=3.7",
    "tabulate>=0.9",
]

[project.urls]
Homepage = "https://github.com/andyluo7/turboquant-amd"
Repository = "https://github.com/andyluo7/turboquant-amd"
Paper = "https://arxiv.org/abs/2504.19874"

[tool.setuptools.packages.find]
include = ["turboquant*"]
